fix: added responsiveness to About Section and Two Column layout

--- a/src/components/UI/organisms/AboutSection/index.module.css
+++ b/src/components/UI/organisms/AboutSection/index.module.css
@@ -9,9 +9,12 @@
 }
 
 .headshot {
+  height: 100%;
   width: 70%;
+  object-fit: contain;
   justify-self: center;
-  height: fit-content;
+  height: max-content;
+  align-self: center;
 }
 
 .copyText {
