--- a/src/components/UI/organisms/ContactForm/index.module.css
+++ b/src/components/UI/organisms/ContactForm/index.module.css
@@ -1,7 +1,9 @@
-.contactForm {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 60%;
-  align-self: center;
+@container (min-width: 980px) {
+  .contactForm {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 70%;
+    align-self: center;
+  }
 }
