--- a/src/components/UI/molecules/Footer/index.module.css
+++ b/src/components/UI/molecules/Footer/index.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-between;
   text-align: center;
-  height: 4rem;
+  height: 8rem;
 }
 
 .footerColumn {
@@ -12,6 +12,9 @@
   flex-direction: column;
   flex-wrap: wrap;
   gap: 1rem;
+  & > p {
+    margin: 0;
+  }
 }
 
 .socialLink {
@@ -23,10 +26,14 @@
 
 .footerLinks {
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 1rem;
-  & > * {
-    width: 25%;
+  justify-content: center;
+}
+
+@media (max-width: 850px) {
+  .footer {
+    flex-direction: column;
+    height: fit-content;
   }
 }
