--- a/src/components/UI/atoms/Logo/index.module.css
+++ b/src/components/UI/atoms/Logo/index.module.css
@@ -3,6 +3,10 @@
   align-items: center;
   justify-content: center;
   padding-left: 2rem;
+  & > a {
+    text-decoration: none;
+    color: black;
+  }
   & > p {
     margin: 0;
   }
