--- a/src/components/UI/atoms/NavLink/index.module.css
+++ b/src/components/UI/atoms/NavLink/index.module.css
@@ -1,8 +1,14 @@
 .navLink {
+  height: 4rem;
+  display: block;
+  text-align: center;
+  line-height: 4rem;
+  padding: 1rem 2rem;
+  cursor: pointer;
+
   text-decoration: none;
   background-color: grey;
   color: black;
-  padding: 1rem 2rem;
 
   &:hover {
     background-color: darkgrey;
