--- a/src/components/UI/molecules/NavBar/index.module.css
+++ b/src/components/UI/molecules/NavBar/index.module.css
@@ -3,5 +3,13 @@
   justify-content: space-between;
   align-items: center;
   background-color: grey;
-  padding: 1rem;
+  height: fit-content;
+}
+
+.links {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin-left: 4rem;
+  margin-right: 4rem;
 }
