--- a/src/components/UI/molecules/NavBar/index.module.css
+++ b/src/components/UI/molecules/NavBar/index.module.css
@@ -13,3 +13,36 @@
   margin-left: 4rem;
   margin-right: 4rem;
 }
+
+.icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .navBar {
+    width: 100%;
+    justify-content: flex-end;
+    height: 4rem;
+  }
+  .links {
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    right: -100%;
+    padding: 4rem 0 0;
+    width: 80%;
+    transition: right 0.4s;
+    display: flex;
+    flex-direction: column;
+  }
+  .linksShown {
+    right: 0;
+    width: 100%;
+  }
+  .icon {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 3rem;
+    width: 20%;
+  }
+}
