--- a/src/components/UI/organisms/HeroSection/index.module.css
+++ b/src/components/UI/organisms/HeroSection/index.module.css
@@ -1,15 +1,15 @@
 .heroSection {
-  & > * > small {
+  height: 50vh;
+  & > * > * > small {
+    font-size: 18px;
     text-transform: uppercase;
     font-weight: bold;
   }
 
-  & > * > h1 {
+  & > * > * > h1 {
+    font-size: 56px;
     text-transform: uppercase;
     font-weight: 900;
-  }
-
-  & > div {
-    width: 30%;
+    margin-top: 0;
   }
 }
