--- a/src/components/UI/templates/ImageWrapper/index.module.css
+++ b/src/components/UI/templates/ImageWrapper/index.module.css
@@ -1,5 +1,14 @@
 .imageWrapper {
+  padding: 5rem;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.textWrapper {
+  height: 100%;
+  width: 30%;
   display: flex;
   flex-direction: column;
-  padding: 5rem;
+  justify-content: center;
 }
